# auto-clicker

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clicker.rs  main.rs
src/routes/: +page.svelte
